# tlstractor

./: .Rbuildignore  .gitignore  404.html  DESCRIPTION  LICENSE  LICENSE-text.html  LICENSE-text.md  LICENSE.html  LICENSE.md  NAMESPACE  NEWS.md  README.md  _pkgdown.yml  authors.html  authors.md  cleanup  configure  configure.ac  configure.win  index.html  index.md  llms.txt  pkgdown.yml  search.json  sitemap.xml
.github/workflows/: pkgdown.yaml
R/: RcppExports.R  convert_gds_to_txt.R  convert_txt_to_gds.R  extract_tracts.R  extract_tracts_flare.R  helper_tracts.R  munge_sumstats.R  tlstractor-package.R  tlstractor.R  validate_param_type.R
articles/: index.html  index.md  tlstractor-tutorial.html  tlstractor-tutorial.md
data-raw/: simulate_data.R
inst/extdata/: simulate_binary.covar.txt  simulate_binary.external_gwas_sumstats.txt  simulate_binary.flare.vcf  simulate_binary.internal_data.txt  simulate_binary.meta.txt  simulate_binary.msp.tsv  simulate_binary.phased.vcf  simulate_binary.pheno.txt  simulate_linear.covar.txt  simulate_linear.external_gwas_sumstats.txt  simulate_linear.flare.vcf  simulate_linear.internal_data.txt  simulate_linear.meta.txt  simulate_linear.msp.tsv  simulate_linear.phased.vcf  simulate_linear.pheno.txt
man/: convert_gds_to_txt.Rd  convert_txt_to_gds.Rd  extract_tracts.Rd  extract_tracts_flare.Rd  munge_sumstats.Rd  tlstractor.Rd
news/: index.html  index.md
reference/: convert_gds_to_txt.html  convert_gds_to_txt.md  convert_txt_to_gds.html  convert_txt_to_gds.md  extract_tracts.html  extract_tracts.md  extract_tracts_flare.html  extract_tracts_flare.md  index.html  index.md  munge_sumstats.html  munge_sumstats.md  tlstractor.html  tlstractor.md
src/: Makevars.in  RcppExports.cpp  utils.cpp
vignettes/: tlstractor-tutorial.Rmd
